chore: minor code enhancement 2